Project 3_ Predicting Default Risk
Predicting Default Risk

--- a/Project3_PredictingDefaultRisk/Project_ Creditworthiness.ipynb
+++ b/Project3_PredictingDefaultRisk/Project_ Creditworthiness.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "\n",
     "\n",
-    "<h1><center> Project 5: A/B Test a New Menu Launch </center></h1>\n",
+    "<h1><center> Project 4: Predicting Default Risk </center></h1>\n",
     "\n",
     " ###  Structure of Report\n",
     "<ol>\n",
@@ -43,46 +43,33 @@
     "<a id='1'></a>\n",
     "#### a. Goal of project\n",
     "\n",
-    "-  As a business analyst for Round Roasters, a coffee restaurant in the United States of America, I need to analyze the A/B test to figure whether the new menu can drive enough sales to offset the cost of marketing the new menu. A recommendation to whether the Round Roasters chain should launch a new menu should be written.\n",
-    "\n",
-    "- Situation:\n",
-    "    - stagnant growth at the coffee chain, \n",
-    "    - managerment wants to reignite growth at their stores.\n",
-    "- Initiative:\n",
-    "    - Introducing gourmet sandwiches to the menu, along with limited wine offerings. \n",
-    "    - A television advertising campaign is crucial to drive people into the stores with these new offerings.\n",
-    "- Problems:\n",
-    "    - A significant boost in the company’s marketing budget, \n",
-    "    - Unknown return on investment (ROI),\n",
-    "    - Current customers will not buy into the new menu offerings.\n",
-    "- Strategy:\n",
-    "    - Test the changes in two cities ( Denver and Chicag) with new television advertising\n",
-    "        - The stores in these two cities (or markets) perform similarly to all stores across the entire chain of stores;\n",
-    "        - A good proxy to predict how well the updated menu performs.\n",
-    "    - Test period: 12 weeks (2016-April-29 to 2016-July-21) compared with 12 weeks last years ((2015-April-29 to 2015-July-21).)\n",
-    "    - Scope: five stores in each of the test markets offered the updated menu along with television advertising.\n",
-    "- Tasks:\n",
-    "    - Analyzing the results of the experiment to determine whether the menu changes should be applied to all stores,\n",
-    "    - Predicting impact to profitability\n",
-    "    - In the data, profit is represented in the gross_margin variable.\n",
-    "\n",
+    "- As loans officers at a young and small bank, we need to come up with an efficient solution to classify new customers on whether they can be approved for a loan or not. Using a series of classification models to figure out the best model and provide a list of creditworthy customers to the manager.\n",
+    "- Typycally getting 200 loan applications per week and approves them by hand, but now suddenly nearly 500 loan applications to process this week. This is a great opportunity and but needs to figure out how to process all of these loan applications within one week.\n",
+    "- For this project, you will analyze the business problem using the Problem Solving Framework and provide a list of creditworthy customers to your manager in the next two days.\n",
     "\n",
     "<a id='2'></a>\n",
     "#### b. Datasets overview\n",
-    "- `round-roaster-stores.csv` - This file contains store information for each Round Roaster store in the USA.\n",
+    "- `credit-data-training.xlsx` - This file contains all credit approvals from your past loan applicants the bank has ever completed [Datenbanken].\n",
     "\n",
-    "- `treatment-stores.csv` - This file contains store information for each store that offered the new menu items.\n",
-    "\n",
-    "- `round-roaster-transactions.zip` - This file contains transaction level information for all of Round Roaster's stores\n",
+    "- `customers-to-score.xlsx` - This is the new set of customers that needed to score on the classification model.\n",
     "\n",
     "<a id='3'></a>\n",
     "#### c. Key Decisions:\n",
-    "- What is the performance metric you’ll use to evaluate the results of your test?\n",
-    "> profitability\n",
-    "- What is the test period?\n",
-    "> Test period: 12 weeks (2016-April-29 to 2016-July-21)\n",
-    "- At what level (day, week, month, etc.) should the data be aggregated?\n",
-    "> The data should be aggregated weekly."
+    "-\tWhat decisions needs to be made?\n",
+    "> which application of new customers will be set as creditworthy and which will not.\n",
+    "-\tWhat data is needed to inform those decisions?\n",
+    "> All the data involves with applications need to be taken in to consider such as :`Account-Balance`, `Duration-of-Credit-Month`,\n",
+    "       `Payment-Status-of-Previous-Credit`, `Purpose`, `Credit-Amount`,\n",
+    "       `Value-Savings-Stocks`, `Length-of-current-employment`,\n",
+    "       `Instalment-per-cent`, `Guarantors`, `Most-valuable-available-asset`, `Age-years`, `Concurrent-Credits`,\n",
+    "       `Type-of-apartment`, `No-of-Credits-at-this-Bank`, `Occupation`,\n",
+    "       `No-of-dependents`, `Telephone`, `Foreign-Worker`\n",
+    "-  What kind of model (Continuous, Binary, Non-Binary, Time-Series) need to be used to help make these decisions?\n",
+    "> We need to consider the models following to make decision\n",
+    "    - Logistic Regression with Stepweise\n",
+    "    - Boosted Model\n",
+    "    - Decision Tree\n",
+    "    - Forest Tree"
    ]
   },
   {
@@ -1051,8 +1038,9 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Hide code",
   "hide_code_all_hidden": true,
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
