--- a/Project2_OpeningNewStore/Project_2_OpeningNewStore.ipynb
+++ b/Project2_OpeningNewStore/Project_2_OpeningNewStore.ipynb
@@ -820,7 +820,7 @@
    },
    "source": [
     "We use Alteryx to clean the data. The workflow is following:\n",
-    "![Capture.PNG](attachment:Capture.PNG)"
+    "![image/Capture.PNG](attachment:Capture.PNG)"
    ]
   },
   {
@@ -896,7 +896,7 @@
     "### b. Modeling\n",
     "\n",
     "After choosing predictor variables to the model. We will run Alteryx and have a regression liner:\n",
-    "![Prediction.PNG](attachment:Prediction.PNG)\n",
+    "![image/Prediction.PNG](attachment:Prediction.PNG)\n",
     "- The linear regression will be:\n",
     "\n",
     "> `[Total Pawdacity Sales]` = 197,330 – 48.42*`[Land Area]` + 49.14 * `[Total Families]`"
@@ -915,7 +915,7 @@
    "source": [
     "<a id='9'></a> \n",
     "### c. Validation\n",
-    "![Report.PNG](attachment:Report.PNG)\n",
+    "![image/Report.PNG](attachment:Report.PNG)\n",
     "> With the report, we can see that linear regression is quite good to predict the revenue of expected stores because all of predictor variables are statistical significant with `p_value` < 0.05. In addition `Adjusted R-Square` = 0.8866 shows thatthe regression model is also good."
    ]
   },
@@ -1101,7 +1101,7 @@
  "metadata": {
   "celltoolbar": "Hide code",
   "hide_code_all_hidden": false,
-  "hide_input": false,
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
