--- a/Project3_PredictingDefaultRisk/Project_ Creditworthiness.ipynb
+++ b/Project3_PredictingDefaultRisk/Project_ Creditworthiness.ipynb
@@ -265,7 +265,7 @@
    },
    "source": [
     "At first we will have an overview about the summary of data in this dataset. Here we can see that, the given dataset had information of 500 customers. \n",
-    "![SummaryField.PNG](attachment:SummaryField.PNG)"
+    "![image/SummaryField.PNG](attachment:SummaryField.PNG)"
    ]
   },
   {
@@ -532,7 +532,7 @@
    },
    "source": [
     "With the Person correlation we can see the most influencing factors on `Credit-Application-Result`with 3 statistically significant factors.\n",
-    "![Person%20Correlation.PNG](attachment:Person%20Correlation.PNG)"
+    "![image/Person%20Correlation.PNG](attachment:Person%20Correlation.PNG)"
    ]
   },
   {
@@ -595,8 +595,8 @@
     "After that we run the Logistic Regression model with the target variables `Credit-Application-Result` and predictor variables. \n",
     "Using a technique `Stepwise regression`, we can get automatically the best predictor variables.\n",
     "\n",
-    "![LogReg.PNG](attachment:LogReg.PNG)\n",
-    "![LogReg3.PNG](attachment:LogReg3.PNG)\n",
+    "![image/LogReg.PNG](attachment:LogReg.PNG)\n",
+    "![image/LogReg3.PNG](attachment:LogReg3.PNG)\n",
     "\n",
     "Observe the report of Logistic Model, we can see the relationship between the target and predictor variable ( with `p_value` < 0.05 then predictor variable is statistically significant). \n",
     "Another factor is that for this model `R-squared = 0.2048` which present a quite weak model."
@@ -618,8 +618,8 @@
    },
    "source": [
     "#### Validation \n",
-    "![LogCompare1.PNG](attachment:LogCompare1.PNG)\n",
-    "![LogCompare2.PNG](attachment:LogCompare2.PNG)\n",
+    "![image/LogCompare1.PNG](attachment:LogCompare1.PNG)\n",
+    "![image/LogCompare2.PNG](attachment:LogCompare2.PNG)\n",
     "\n",
     "With the support of `Model Comparision`, we can see that the Accuracy of `Logistic Regression` for this prediction is 76% with 87,67% accuracy for Creditworthy but only 48.89% for Non-Creditworth."
    ]
@@ -641,7 +641,7 @@
     "### b. Boosted Model\n",
     "With Boosted Model, a machine learning technique for regression and classification problems, we can get the best predictor variables to predict `Credit-Application-Result`. With the Variable Importance Plot we can see that with this model, `Account Balance`, and `Credit-Amount` are 2 most important factors to predict the result of application for credit. Next one are `Duration-of-Credit-Month`, `Purpost` and `Payment-Status-of-Previous-Credit`. \n",
     "\n",
-    "![Boosted1.PNG](attachment:Boosted1.PNG)"
+    "![image/Boosted1.PNG](attachment:Boosted1.PNG)"
    ]
   },
   {
@@ -661,8 +661,8 @@
    "source": [
     "#### Data Validation\n",
     "To validate this Model we use `Comparison Method` to test the validation of the model:\n",
-    "![Boosted3.PNG](attachment:Boosted3.PNG)\n",
-    "![Boosted4.PNG](attachment:Boosted4.PNG)\n",
+    "![image/Boosted3.PNG](attachment:Boosted3.PNG)\n",
+    "![image/Boosted4.PNG](attachment:Boosted4.PNG)\n",
     "\n",
     "With the Model `Comparison Report`, the general accurancy of `Boosted Model` makes up 78.67% with 96.19% accuracy to predict Creditworthy, but only 37.78% for Non-Creditworthy."
    ]
@@ -685,7 +685,7 @@
     "\n",
     "The Model Summary shows that variables used in tree construction are `Account-Balance`, `Value-Savings-Stocks`, and `Duration-of-Credit-Month`. \n",
     "\n",
-    "![DecisionTree1.PNG](attachment:DecisionTree1.PNG)"
+    "![image/DecisionTree1.PNG](attachment:DecisionTree1.PNG)"
    ]
   },
   {
@@ -697,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![DecisionTree11.PNG](attachment:DecisionTree11.PNG)"
+    "![image/DecisionTree11.PNG](attachment:DecisionTree11.PNG)"
    ]
   },
   {
@@ -718,8 +718,8 @@
     "#### Model Validation\n",
     "With the `Comparison Report`, we can see `Decision Tree` model has 74,67% accuracy. The accuracy rate for Creditworthy is 86.67% and Non-Creditworthy is 46.67%.\n",
     "\n",
-    "![DecisionTree2.PNG](attachment:DecisionTree2.PNG)\n",
-    "![DecisionTree3.PNG](attachment:DecisionTree3.PNG)"
+    "![image/DecisionTree2.PNG](attachment:DecisionTree2.PNG)\n",
+    "![image/DecisionTree3.PNG](attachment:DecisionTree3.PNG)"
    ]
   },
   {
@@ -739,7 +739,7 @@
     "A forest model, a machine learning methods that predict a target variable using predictor variables having influences on the target variable. To predict `Credit-Application-Result`, the Forest Tree Model always choose to use the best predictor variables.\n",
     "\n",
     "The Model Summary shows that most important variables used in Forest Tree Model are `Credit-Amount`, `Age-years`, and `Duration-of-Credit-Month`and`Account-Balance`.\n",
-    "![ForestTree0.PNG](attachment:ForestTree0.PNG)"
+    "![image/ForestTree0.PNG](attachment:ForestTree0.PNG)"
    ]
   },
   {
@@ -754,7 +754,7 @@
     "hidePrompt": true
    },
    "source": [
-    "![ForestTree1.PNG](attachment:ForestTree1.PNG)\n"
+    "![image/ForestTree1.PNG](attachment:ForestTree1.PNG)\n"
    ]
   },
   {
@@ -774,8 +774,8 @@
    "source": [
     "#### Validation\n",
     "To validate the Forest Tree Model we use `Comparison Model`. With the Model Comparison report, we can see that the Forest Tree Model has a accuracy rate of 78.67%. Out of them, 96.19% predict accurately the application for creditworth, but only 37.78% for non creditworthy.\n",
-    "![ForestTree3.PNG](attachment:ForestTree3.PNG)\n",
-    "![ForestTree4.PNG](attachment:ForestTree4.PNG)"
+    "![image/ForestTree3.PNG](attachment:ForestTree3.PNG)\n",
+    "![image/ForestTree4.PNG](attachment:ForestTree4.PNG)"
    ]
   },
   {
@@ -796,7 +796,7 @@
     "#### a. Choosing Model\n",
     "After all, we will find which model is the best to predict the creditworthiness of applications from 500 new customers.\n",
     "With the `Comparison Model`, we will have the Report following:\n",
-    "![SummaryCompare1.PNG](attachment:SummaryCompare1.PNG)"
+    "![image/SummaryCompare1.PNG](attachment:SummaryCompare1.PNG)"
    ]
   },
   {
@@ -811,7 +811,7 @@
     "hidePrompt": true
    },
    "source": [
-    "![SummaryCompare3.PNG](attachment:SummaryCompare3.PNG)\n",
+    "![image/SummaryCompare3.PNG](attachment:SummaryCompare3.PNG)\n",
     "With the report, we can see that `Boosted Model` and `Forest Model` have the best rate of accuracy ( 78.67% for both). However, The ROC curve gives an expression that `Forest Model` is better when we use such models for prediction of creditworthiness. "
    ]
   },
@@ -1016,7 +1016,7 @@
    },
    "source": [
     "And we can see that with `Forest Model`, from 500 new customers with given information in Dataset, we will classify into 2 category: `Creditworthy` and `Non-creditworthy` with the number like following:\n",
-    "![Capture.PNG](attachment:Capture.PNG)"
+    "![image/Capture.PNG](attachment:Capture.PNG)"
    ]
   },
   {
@@ -1033,14 +1033,13 @@
    "source": [
     "\n",
     "All of the process to choose a suitable model as well as to predict the application result follows the Alteryx Workflow:\n",
-    "![Modelling.PNG](attachment:Modelling.PNG)"
+    "![image/Modelling.PNG](attachment:Modelling.PNG)"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Hide code",
   "hide_code_all_hidden": true,
-  "hide_input": false,
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
