--- a/Project6_CapstoneProject/Project6_CapstoneProject.ipynb
+++ b/Project6_CapstoneProject/Project6_CapstoneProject.ipynb
@@ -102,10 +102,10 @@
     "<a id='wrangling'></a> \n",
     "## 1. Store Format for Existing Stores\n",
     "#### - Workflow to find out Store Formats for Existing Stores\n",
-    "![WorkflowTask1.PNG](attachment:WorkflowTask1.PNG)\n",
+    "![image/WorkflowTask1.PNG](attachment:WorkflowTask1.PNG)\n",
     "\n",
     "#### - The optimal Format number for existing Stores\n",
-    "![ADI_CHI.PNG](attachment:ADI_CHI.PNG)\n",
+    "![image/ADI_CHI.PNG](attachment:ADI_CHI.PNG)\n",
     "\n",
     "- According to 2 plots of Adjusted Rand Indices and Calanski Harabas Indices, it is clear that with 3 clusters, we will get the highest mean, the tightest bound. \n",
     "\n",
@@ -113,19 +113,19 @@
     "\n",
     "#### - Number of existing stores in each cluster\n",
     "\n",
-    "![ClusterInfo.PNG](attachment:ClusterInfo.PNG)\n",
+    "![image/ClusterInfo.PNG](attachment:ClusterInfo.PNG)\n",
     "\n",
     "#### - Characters of each cluster\n",
-    "![ClusteronPCplot.PNG](attachment:ClusteronPCplot.PNG)\n",
+    "![image/ClusteronPCplot.PNG](attachment:ClusteronPCplot.PNG)\n",
     "\n",
     "- With the cluster solution plot, it seems that cluster 2 is defined based on `Frozen_Food_Category`, `Floral_Category`, `Produce_Category`, `Dairy_Category` and `Bakery_Category` is separate very clearly with 2 other clusters. Whereas Cluster 1 is based `Dry_Grocery_Category` and `Merchandise_Category` and the last one, Cluster 3, is based on `Meat_Category` and `Deli_Category`. But some elements in Cluster 1 and Cluster 3 are mixed.\n",
     "\n",
     "- With the Figure following we can have an overview about the characters of clusters. \n",
-    "![CharatersCluster.PNG](attachment:CharatersCluster.PNG)\n",
+    "![image/CharatersCluster.PNG](attachment:CharatersCluster.PNG)\n",
     "- At first we can see an overview about the behaviors of each cluster with the total sale. Clearly, clusters 1 contributes the largest part of total sale althought demographic and socioeconomic characteristics in cluster 1 seems not as good as the cluster 2 with the lower house values, lower income per household and lower population in labour ages. The education niveau of population in cluster 1 with a bachelor, master or higher is also lower. Whereas the cluster 2 seems to have the best demographic and socioeconomic characteristics which are in contrast with cluster 1. Cluster 3 and cluster 1 seems to have some similarities.\n",
     " \n",
     "#### - The location of the existing stores with color to show cluster, and size to show total sales. \n",
-    "![MappingCluster.PNG](attachment:MappingCluster.PNG)\n",
+    "![image/MappingCluster.PNG](attachment:MappingCluster.PNG)\n",
     "[Link in Tableau Public](https://public.tableau.com/profile/lien.phuong#!/vizhome/Mapping_15939641028620/Sheet1)"
    ]
   },
@@ -156,19 +156,19 @@
     "In this part, we develop a model that predicts which segment or cluster a store falls into based on the demographic and socioeconomic characteristics of the population. Then using that model to determine which format suits to each store.\n",
     "Under is the workflow of determining format for new stores: \n",
     "\n",
-    "![WorkflowTask2.PNG](attachment:WorkflowTask2.PNG)\n",
+    "![image/WorkflowTask2.PNG](attachment:WorkflowTask2.PNG)\n",
     "<center>The Workflow to detemine format for new stores</center>\n",
     "\n",
     "#### b. Methodology to predict the best store format for the new stores\n",
     " - To detemine the Format for New Stores, we will use 3 Models: `Decision Tree`, `Forest Model` und `Boosted Model` because the target variable is a category variable with more than 2 values.\n",
     " - To choose the best Model, we use `Model comparison` to compare the performent of 3 Models. According to the **Model Comparison Report** it is clear that `Boosted Model` has the best performents with the highest `Accuracy` of 82.35% and the highest `F1 Score` (a precision measure) of 88.89%. Here is the Model Comparison Report:\n",
     "  \n",
-    "![ModelComparison.PNG](attachment:ModelComparison.PNG)\n",
+    "![image/ModelComparison.PNG](attachment:ModelComparison.PNG)\n",
     "\n",
     "> So we will choose `Boosted Model` to predict the format for new stores\n",
     "\n",
     "#### c. The most important variables \n",
-    "![ImportantVariable.PNG](attachment:ImportantVariable.PNG)\n",
+    "![image/ImportantVariable.PNG](attachment:ImportantVariable.PNG)\n",
     "> 3 most important variables from `Boosted Model`: `Age0to9`, `HVal759KPlus`, `EdHSGrad` \n",
     "\n",
     "- According to the plot of Important variables from Boosted Model, it can be seen that `Age0to9`, `HVal759KPlus`, `EdHSGrad` respectively are the most 3 important variables. However, when we looks at the top ten important variables, we can see that Education, und then the age of those under oder above labor age plays a crucial role.\n",
@@ -176,7 +176,7 @@
     "#### d. Format for each of the 10 new stores \n",
     "- After choosing the Boosted Model as the best model, We predict the format of the new stores based on the information of the demographic and socioeconomic characteristics of the population resides in the area around each new store. We use `Prediction Score` to find out which format suits to each new store. The result is the table following:\n",
     "\n",
-    "![StoreFormat.PNG](attachment:StoreFormat.PNG)"
+    "![image/StoreFormat.PNG](attachment:StoreFormat.PNG)"
    ]
   },
   {
@@ -222,12 +222,12 @@
     "## 3. Forecasting Produce Sales for 2016\n",
     "#### a. Workflow to find out the best predicted model\n",
     "- In order to forecast the produce sales for 2016, 2 Tools under consideration are ` ETS` (an exponential smoothing method) and  `ARIMA` which are using to estimate a time series forecasting model. To choose one of 2 tools for predicting Produce Sales for 2016, we use `TS Comparison`. The Workflow to forecasting Produce Sales is following: \n",
-    "![Workflow1.PNG](attachment:Workflow1.PNG)\n",
+    "![image/Workflow1.PNG](attachment:Workflow1.PNG)\n",
     "<center> The Workflow to predict Produce Sales 2016</center>\n",
     "\n",
     "#### b. Overview about the data building\n",
     "- At first we need to process the given data to build monthly produce sales data of existing stores. Then we use data of last 6 months to validate the 2 models ETS and ARIMA, the data of another months is used to develop predicted models. To better understand the time series data and to determine how to proceed in developing a forecasting model, we can use `TS Plot` to have the plots under: \n",
-    "![TimeSeriesPlot.PNG](attachment:TimeSeriesPlot.PNG)\n",
+    "![image/TimeSeriesPlot.PNG](attachment:TimeSeriesPlot.PNG)\n",
     "\n",
     "#### c. Choosing the best model\n",
     "**Choosing ETS model**\n",
@@ -236,19 +236,19 @@
     "\n",
     "**Choosing ARIMA model**\n",
     "- Having seasonality suggests that any ARIMA models used for analysis will need seasonal differencing. Because there are seasonal components found in the time series, so `ARIMA(p, d, q)(P, D,Q)m` model are used for forecasting. The ACF presents of the original plot shows slowly a serial correlations towards 0 with increases at the seasonal lags. Since serial correlation is high, differencing needs to be perform.\n",
-    "![ACF_PACFPlot.PNG](attachment:ACF_PACFPlot.PNG)\n",
+    "![image/ACF_PACFPlot.PNG](attachment:ACF_PACFPlot.PNG)\n",
     "<center> ACF and PACF plot of original model</center>\n",
     "\n",
-    "![SeasonalDifferenceACFandPACF.PNG](attachment:SeasonalDifferenceACFandPACF.PNG)\n",
+    "![image/SeasonalDifferenceACFandPACF.PNG](attachment:SeasonalDifferenceACFandPACF.PNG)\n",
     "- The seasonal difference presents a slightly less autocorrelations and partial autocorrelations as those in the initial plots without big difference. In order to remove correlation we will need to difference further. \n",
     "\n",
-    "![Seasonal%20First%20Difference.PNG](attachment:Seasonal%20First%20Difference.PNG)\n",
+    "![image/Seasonal%20First%20Difference.PNG](attachment:Seasonal%20First%20Difference.PNG)\n",
     "- The seasonal first difference of the series has removed most of the significant lags from the ACF and PACF so there is no need for further differencing. The remaining correlation can be accounted for using autoregressive and moving average terms and the differencing terms will be d(1) and D(1). The ACF plot shows a strong negative correlation at lag 1 which is confirmed in the PACF. This suggests an q(1) model since  there is 1 significant lag on ACF and confirmed by PACF. The seasonal lag 12 both in the ACF and PACF shows a need for Q(1). There are 12 months in a year (season).\n",
     "> so we choose ARIMA(0, 1, 1)(0, 1, 1)[12]\n",
     "\n",
     "**Choosing `ETS(M,N,M)` or `ARIMA(0,1,1)(0,1,1)` model for forecast**\n",
     "\n",
-    "![Comparison%20of%202Models.PNG](attachment:Comparison%20of%202Models.PNG)\n",
+    "![image/Comparison%20of%202Models.PNG](attachment:Comparison%20of%202Models.PNG)\n",
     "\n",
     "- According to table `Actual and Forecast Values`, we can see that the `ETS(M,N,M)` model has a better accurancy in comparison with the ARIMA model. In almost falls, predicted values of ETS are near with the actual values than those of ARIMA. The `Accuracy measure` table can confirm it. And with the Plot following, we can show it more clearly:\n",
     "![Comparision2modelsPlot.PNG](attachment:Comparision2modelsPlot.PNG)\n",
@@ -256,15 +256,15 @@
     "\n",
     "#### c. The forecast results\n",
     "Under is the workflow to get the results from `ETS` model\n",
-    "![Workflow2.PNG](attachment:Workflow2.PNG)\n",
+    "![image/Workflow2.PNG](attachment:Workflow2.PNG)\n",
     "\n",
     "- We the workflow like above we will get the forecast result like following.\n",
     "\n",
-    "![PredictedValue.PNG](attachment:PredictedValue.PNG)\n",
+    "![image/PredictedValue.PNG](attachment:PredictedValue.PNG)\n",
     "\n",
     "With the help of Tableau, the forecast sales of both existing stores as well as the new stores along with the historiscal data are presented following:\n",
     "\n",
-    "![SaleForeCast.PNG](attachment:SaleForeCast.PNG)\n"
+    "![image/SaleForeCast.PNG](attachment:SaleForeCast.PNG)\n"
    ]
   }
  ],
